# WinterPlatformer

./: CMakeLists.txt  README.md  compile.sh  compilelibs.sh  run.sh
Shaders/: test.frag  test.vert
src/: Camera.hpp  Shader.hpp  Utilities.hpp  Window.cpp  Window.hpp  WindowBase.cpp  WindowBase.hpp  glad.c  main.cpp
src/game/: Camera.hpp
src/glad/: glad.h
src/physics/: PhysicsObject.hpp  Transform.hpp
src/windowing/: GameTime.hpp  Mouse.hpp  Time.hpp  Window.cpp  Window.hpp  WindowBase.cpp  WindowBase.hpp
